# jax-qmc

./: README.md  example_sobol.py  pyproject.toml  sobol.py
src/jax_qmc/: Untitled.ipynb  __init__.py  discrepancy.py  example_sobol.py  mvn_cdf.py  qmc.py  scrambled.py  sobol.py  temp.py  test_mvn_cdf.py
