[project]
name = "jax-qmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Marthaler", email = "dan.marthaler@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
